--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,29 +22,51 @@ body {
   display: inline-block;
 }
 
-.square-grid-4x4 {  
+.square-grid-initial {  
   width: calc(25% - 0.25em - 4px);
   padding-top: calc(25% - 0.25em - 4px);
+}
+
+.square-grid-4x4 {  
+  width: calc(25% - 0.25em - 4px);
+  padding-top: calc(25% - 0.25em - 4px);  
+  margin: 0 2px;
 }
 
 .square-grid-6x6 {  
   width: calc(16.667% - 0.25em - 4px);
   padding-top: calc(16.667% - 0.25em - 4px);
+  margin: 0 2px;
 }
 
 .square-grid-8x8 {  
   width: calc(12.5% - 0.25em - 4px);
   padding-top: calc(12.5% - 0.25em - 4px);
+  margin: 0 2px;
 }
 
 .square-grid-10x10 {  
   width: calc(10% - 0.25em - 4px);
   padding-top: calc(10% - 0.25em - 4px);
+  margin: 0 2px;
 }
 
 .square-grid-12x12 {  
   width: calc(8.333% - 0.25em - 4px);
   padding-top: calc(8.333% - 0.25em - 4px);
+  margin: 0 3px;
+}
+
+.square-grid-14x14 {  
+  width: calc(7.1429% - 0.25em - 4px);
+  padding-top: calc(7.1429% - 0.25em - 4px);
+  margin: 0 3px;
+}
+
+.square-grid-20x20 {  
+  width: calc(5% - 0.25em - 4px);
+  padding-top: calc(5% - 0.25em - 4px);
+  margin: 0 3px;
 }
 
 .red-square {
