--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
 }
 
 .green-square {
-  background-color: green;
+  background-color: lime;
 }
 
 #center-nums {
@@ -145,7 +145,9 @@ body {
 }
 
 #start,
-#timer {
+#timer,
+#exit,
+#continue {
   font-size: 1.5em;
   margin: 0;
 }
@@ -171,7 +173,9 @@ body {
   }
 
   #start,
-  #timer {
+  #timer,
+  #exit,
+  #continue {
   font-size: 2.5em;
   margin: 0;
   }
