Event handlers revised to disallow the clicking of the home link when the player has yet to start the game. New classes added to clickable items so that the cursor signals items which react to user input.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,16 @@ body {
   background-position: center;
 }
 
-a {
-  color: inherit;
+.clickable {
+  cursor: pointer;
+}
+
+.unclickable {
+  cursor: not-allowed;
+}
+
+.half-text-size {
+  font-size: 0.75em;
 }
 
 .centered-text-box {
