Formulae for calculating red and green squares revised following discovery of earlier stages containing the same number of red squares each time the game is played. Additional html paragraph added to enable the player to replay the game once it has been successfully completed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,8 @@ body {
 }
 
 #how-to,
-#stage-number {
+#stage-number,
+#replay {
   font-size: 1em;
   margin: 0;
 }
@@ -237,7 +238,8 @@ body {
   }
 
   #how-to,
-  #stage-number {
+  #stage-number,
+  #replay {
     font-size: 2em;
     margin: 0;
   }
