--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@ body {
   color: red;
   background-image: url("../images/bg-img-grey.png");
   border-radius: 3%;
-  background-size: cover;
-  background-position: center;
 }
 
 .hidden {
@@ -25,7 +23,7 @@ body {
   cursor: not-allowed;
 }
 
-.half-text-size {
+.sigma-text-size {
   font-size: 0.75em;
 }
 
@@ -157,6 +155,22 @@ body {
   margin-top: 0.25rem;
 }
 
+#instructions {
+  margin: auto auto;
+  text-align: center;
+  padding: 0.5em;
+  background-color: black;
+  border-radius: 3%;
+  z-index: 1;
+  max-width: 70vh;
+  /* position: absolute; */
+  left: 10vw;
+}
+
+#help-exit {
+  padding-top: 0.5em;
+}
+
 #squares-container {
   margin: auto auto;
   max-width: 70vh;
@@ -202,6 +216,7 @@ body {
   text-align: center;
 }
 
+/* CLASS TO BE ADDED FOR THESE */
 #start,
 #timer,
 #exit,
@@ -211,6 +226,7 @@ body {
   margin: 0;
 }
 
+/* CLASS TO BE ADDED FOR THESE */
 #how-to,
 #stage-number,
 #replay {
@@ -232,6 +248,7 @@ body {
     font-size: 2em;
   }
 
+  /* CLASS TO BE ADDED FOR THESE */
   #start,
   #timer,
   #exit,
@@ -241,6 +258,7 @@ body {
   margin: 0;
   }
 
+  /* CLASS TO BE ADDED FOR THESE */
   #how-to,
   #stage-number,
   #replay {
