--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 
 :root {
   --square-gap-total: (0.25em + 4px);
+  --max-width: (100vw - 1em);
+  --max-height: (100vh - 2em);
 } 
 
 body {
@@ -9,6 +11,12 @@ body {
   color: red;
   background-image: url("../images/bg-img-grey.png");
   border-radius: 3%;
+  margin: 1em 0.5em;
+  width: calc(var(--max-width));
+  height: calc(var(--max-height));
+  overflow: hidden;
+  display: grid;
+  align-content: center;
 }
 
 .hidden {
@@ -30,7 +38,7 @@ body {
 .centered-text-box {
   background-color: black;
   width: fit-content;
-  margin: 0.5em auto;
+  margin: auto;
   border-radius: 10%;
 }
 
@@ -141,6 +149,10 @@ body {
   background-color: red;
 }
 
+#title-help-container {
+  margin-bottom: 1em;
+}
+
 #center-nums {
   display: flex;
   justify-content: center;
@@ -163,7 +175,6 @@ body {
   border-radius: 3%;
   z-index: 1;
   max-width: 70vh;
-  /* position: absolute; */
   left: 10vw;
 }
 
@@ -214,6 +225,8 @@ body {
 
 #bottom-text-container {
   text-align: center;
+  margin-top: 1em;
+  width: calc(var(--max-width));
 }
 
 /* CLASS TO BE ADDED FOR THESE */
