All sound files added, linked and played during relevant times. Manual testing for sound files completed. Additional comments added to areas of script.js to explain functions & event handlers and to split the contents of the code into relevant categories.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,13 @@ button {
   outline: red solid 3px;
 }
 
+/* Method to remove arrows on number inputs taken from https://css-tricks.com/snippets/css/turn-off-number-input-spinners/ */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .hidden {
   display: none;
 }
@@ -253,6 +260,7 @@ margin-top: 0.25rem;
   width: 50%;
   display: block;
   margin: auto;
+  text-align: center;
 }
 
 #player-submit {
@@ -316,7 +324,7 @@ margin-top: 0.25rem;
 
   #instructions-container {
     font-size: 1.5em;
-    margin: 0 auto;
+    margin: 1em auto;
   }
 
   #player-start-input {
